[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/actor_debug/ActorInterface.gd" type="Script" id=1]
[ext_resource path="res://interface/themes/General.tres" type="Theme" id=2]
[ext_resource path="res://interface/actor_debug/StatesLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/actor_debug/StatsLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/BattleHUD/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/BattleHUD/RevengeBar.tscn" type="PackedScene" id=6]

[node name="ActorInterface" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -423.0
margin_bottom = -166.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
margin_left = -416.0
margin_top = 368.0
margin_right = 84.0
margin_bottom = 404.0

[node name="RevengeBar" parent="." instance=ExtResource( 6 )]
margin_left = -352.0
margin_top = 400.0
margin_right = 32.0
margin_bottom = 436.0

[node name="StatesPanel" type="ColorRect" parent="."]
visible = false
margin_left = 440.777
margin_top = -70.4987
margin_right = 591.777
margin_bottom = 829.501
rect_min_size = Vector2( 400, 900 )
color = Color( 0.258824, 0.258824, 0.258824, 0.827451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatesLabel" parent="StatesPanel" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 39.0
margin_bottom = 14.0
text = "States

"

[node name="StatsPanel" type="ColorRect" parent="."]
visible = false
margin_left = 0.802612
margin_top = 1.09509
margin_right = 50.8026
margin_bottom = 801.095
rect_min_size = Vector2( 400, 800 )
color = Color( 0.258824, 0.258824, 0.258824, 0.827451 )

[node name="StatsLabel" parent="StatsPanel" instance=ExtResource( 4 )]
